# rlm

./: .clang-format  .gitignore  CHANGE_NOTES.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS  LICENSE  README.md
.github/: pull_request_template.md  pull_request_template.md.license
.github/ISSUE_TEMPLATE/: bug_report.yml  build_problem.yml  config.yml  feature_suggestion.yml
.github/workflows/: REUSE Compliance.yml  Unit Tests.yml
.reuse/: dep5
include/rlm/: clamp.hpp  concepts.hpp  configuration.hpp.in  gcd.hpp  gcf.hpp  hash_combine.hpp  lerp.hpp  max.hpp  min.hpp  mirror.hpp  position_orientation.hpp  repeat.hpp  rlm.hpp  rotation_motion.hpp
include/rlm/cellular/: Packer.hpp  are_collinear.hpp  are_intersecting.hpp  are_parallel.hpp  are_perpendicular.hpp  bin_packing.hpp  border_corners.hpp  borders.hpp  bounding_box2.hpp  bounding_cell_box2.hpp  bounds.hpp  box2.hpp  box2_between.hpp  box2_borders.hpp  cell_box2.hpp  cell_box2_between.hpp  cell_box2_borders.hpp  cell_circle2.hpp  cell_circle2_size.hpp  cell_segment2.hpp  cell_segment2_between.hpp  cell_segment2_direction.hpp  cell_segment2_formula.hpp  cell_segment2_size.hpp  cell_vector2.hpp  cell_vector2_orientation.hpp  cells_between.hpp  center.hpp  circle2.hpp  circle2_size.hpp  concepts.hpp  coordinates.hpp  crop.hpp  cross.hpp  degenerate_shapes.hpp  direction.hpp  distance_between.hpp  do_intersect.hpp  does_contain.hpp  does_fit.hpp  (+29 more)
include/rlm/cellular/detail/: Packer.inl  are_collinear.inl  are_intersecting.inl  are_parallel.inl  are_perpendicular.inl  borders.inl  bounding_box2.inl  bounding_cell_box2.inl  bounds.inl  box2.inl  box2_between.inl  box2_borders.inl  cell_box2.inl  cell_box2_between.inl  cell_box2_borders.inl  cell_circle2.inl  cell_circle2_size.inl  cell_segment2.inl  cell_segment2_between.inl  cell_segment2_direction.inl  cell_segment2_formula.inl  cell_segment2_size.inl  cell_vector2.inl  cell_vector2_orientation.inl  cells_between.inl  center.inl  crop.inl  (+37 more)
include/rlm/color/: color_channel.hpp  color_conversion.hpp  color_g.hpp  color_ga.hpp  color_rgb.hpp  color_rgba.hpp  concepts.hpp  grayscale_conversion.hpp  hash.hpp  ostream.hpp
include/rlm/detail/: clamp.inl  gcd.inl  gcf.inl  hash_combine.inl  lerp.inl  max.inl  min.inl  mirror.inl  repeat.inl
include/rlm/linear/: box2.hpp  degenerate_shapes.hpp  hash.hpp  is_degenerate.hpp  ostream.hpp  rectangle2.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/rlm/texcoord/: conversion.hpp  ostream.hpp  stpq.hpp  stpqp.hpp  uv.hpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  cellalur_shape_conversion_tests.cpp  cellular_Packer_tests.cpp  cellular_are_collinear_tests.cpp  cellular_are_intersecting_tests.cpp  cellular_are_parallel_tests.cpp  cellular_are_perpendicular_tests.cpp  cellular_borders_tests.cpp  cellular_bounding_box2_tests.cpp  cellular_bounding_cell_box2_tests.cpp  cellular_bounds_tests.cpp  cellular_box2_between_tests.cpp  cellular_box2_borders_tests.cpp  cellular_box2_tests.cpp  cellular_cell_box2_between_tests.cpp  cellular_cell_box2_borders_tests.cpp  cellular_cell_box2_tests.cpp  cellular_cell_circle2_size_tests.cpp  cellular_cell_circle2_tests.cpp  cellular_cell_segment2_direction_tests.cpp  cellular_cell_segment2_formula_tests.cpp  cellular_cell_segment2_size_tests.cpp  cellular_cell_segment2_tests.cpp  cellular_cell_vector2_orientation_tests.cpp  cellular_cell_vector2_tests.cpp  cellular_center_tests.cpp  cellular_circle2_size_tests.cpp  cellular_circle2_tests.cpp  cellular_coordinates_tests.cpp  cellular_crop_tests.cpp  cellular_cross_tests.cpp  cellular_degenerate_shapes_tests.cpp  cellular_direction.cpp  cellular_direction_tests.cpp  cellular_distance_between_tests.cpp  cellular_do_intersect_tests.cpp  cellular_does_contain_tests.cpp  cellular_does_fit_tests.cpp  cellular_dot_tests.cpp  cellular_edges_tests.cpp  (+45 more)
(+23 files in other folders)
